scrollbar fixed

--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,7 @@ body.black-background ul li {
 
 #overlay {
    visibility: hidden;
-    position: fixed;
-    
+    position: fixed; 
     width: 100%;
     height: 100%;
     top: 0;
@@ -144,19 +143,50 @@ main {
 
 
 #content-about {
-    background-color: #f0f0f0;
-    color: #fff;
-    
+    overflow-y: auto;
     height: 45vh;
     width: 45vw;
-    overflow: hidden;
+   
     border-radius: 2rem;
     
 }
 
-#content-about.new-bg {
-    background-color: #242424; /* replace with the new color you want */
+
+#content-about::-webkit-scrollbar {
+    width: 12px;
 }
+
+#content-about::-webkit-scrollbar-track {
+    background: #f0f0f0;
+}
+
+#content-about::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 6px;
+}
+
+#content-about::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+/* Scrollbar styles for dark background */
+body.black-background #content-about::-webkit-scrollbar {
+    width: 12px;
+}
+
+body.black-background #content-about::-webkit-scrollbar-track {
+    background: #333;
+}
+
+body.black-background #content-about::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 6px;
+}
+
+body.black-background #content-about::-webkit-scrollbar-thumb:hover {
+    background: #fff;
+}
+
 
 #top-content, #top-content-related {
     display: grid;
